anasayfa tekrardan düzeltildi

--- a/src/components/menus/shop-product-cart/index.html
+++ b/src/components/menus/shop-product-cart/index.html
@@ -1,6 +1,6 @@
 <a href="#" class="mspl-item">
     <div class="mspli-image">
-        <img src="https://fakeimg.pl/300x200/003228/fff/?retina=1&text=Ürün" alt="">
+        <img src="/images/product-2.jpeg" alt="">
     </div>
     <div class="mspli-main">
         <div class="mspli-title">
@@ -18,7 +18,7 @@
 </a>
 <a href="#" class="mspl-item">
     <div class="mspli-image">
-        <img src="https://fakeimg.pl/300x200/003228/fff/?retina=1&text=Ürün" alt="">
+        <img src="/images/product-2.jpeg" alt="">
     </div>
     <div class="mspli-main">
         <div class="mspli-title">
