--- a/src/components/menus/shop-product-cart-2/index.html
+++ b/src/components/menus/shop-product-cart-2/index.html
@@ -1,4 +1,4 @@
-<a href="#" class="product-rect-content">
+<a href="/pages/product.html" class="product-rect-content">
 
     <div class="prc-title">
         <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A alias autem dolore dolorem, dolores earum, esse ipsam minima molestiae, officiis quidem sequi similique tenetur. Consequuntur culpa dolores eaque iste quo!</span>
