category sayfası tasarımı eklendi

--- a/src/components/menus/shop-product-cart-2/index.html
+++ b/src/components/menus/shop-product-cart-2/index.html
@@ -6,6 +6,18 @@
     <div class="prc-image">
         <img src="/images/product-1.jpeg" alt="">
     </div>
+    <div class="flex items-center leading-3 justify-center mb-2">
+
+        <span class="font-medium mr-2">4.7</span>
+        <input class="rating_val " name="rating" type="hidden"/>
+        <div class="rating rating_sm" data-input-class=".rating_val">
+            <span class="star " data-rating="5"></span>
+            <span class="star" data-rating="4"></span>
+            <span class="star selected" data-rating="3"></span>
+            <span class="star" data-rating="2"></span>
+            <span class="star" data-rating="1"></span>
+        </div>
+    </div>
     <div class="prc-price">
         <span>199,99 TL</span>
         <button class="btn_ btn_primary">Sepete Ekle</button>
