--- a/src/components/menus/header-hover-menu/index.html
+++ b/src/components/menus/header-hover-menu/index.html
@@ -2,30 +2,30 @@
     <div class="">
         <h3>Giyim</h3>
         <ul class="flex flex-col gap-1 mt-2">
-            <li><a href="#">Pantolon</a></li>
-            <li><a href="#">Şort</a></li>
+            <li><a href="/pages/category.html">Pantolon</a></li>
+            <li><a href="/pages/category.html">Şort</a></li>
         </ul>
     </div>
     <div class="">
         <h3>Ayakkabı</h3>
         <ul class="flex flex-col gap-1 mt-2">
-            <li><a href="#">Günlük Ayakkabı</a></li>
-            <li><a href="#">Klasik Ayakkabı</a></li>
+            <li><a href="/pages/category.html">Günlük Ayakkabı</a></li>
+            <li><a href="/pages/category.html">Klasik Ayakkabı</a></li>
         </ul>
     </div>
     <div class="">
         <h3>Kozmetik</h3>
         <ul class="flex flex-col gap-1 mt-2">
-            <li><a href="#">Parfüm</a></li>
-            <li><a href="#">Krem</a></li>
+            <li><a href="/pages/category.html">Parfüm</a></li>
+            <li><a href="/pages/category.html">Krem</a></li>
         </ul>
     </div>
     <div class="col-span-2 hmh-image-menus">
         <div class="hmhim-content">
-            <a href="#"><img src="/images/category-1.webp" alt=""></a>
-            <a href="#"><img src="/images/category-1.webp" alt=""></a>
-            <a href="#"><img src="/images/category-1.webp" alt=""></a>
-            <a href="#"><img src="/images/category-1.webp" alt=""></a>
+            <a href="/pages/category.html"><img src="/images/category-1.webp" alt=""></a>
+            <a href="/pages/category.html"><img src="/images/category-1.webp" alt=""></a>
+            <a href="/pages/category.html"><img src="/images/category-1.webp" alt=""></a>
+            <a href="/pages/category.html"><img src="/images/category-1.webp" alt=""></a>
         </div>
     </div>
 </div>
