--- a/tailwind.css
+++ b/tailwind.css
@@ -8,6 +8,7 @@
   --foreground: #000;
   --divider: #dcdcdc;
   --overlay: #888;
+  --header-height: 112px;
 }
 /*
 @media (prefers-color-scheme: dark) {
@@ -156,6 +157,30 @@ video {
 .alert_.alert_xs .alert_text {
   @apply text-xs;
 }
+.dropdown_ {
+  @apply relative;
+}
+.dropdown_ .dropdown_trigger {
+  @apply inline-block;
+}
+.dropdown_ .dropdown_trigger.dt-active .btn_ {
+  --btn-background: theme("colors.gray.100");
+}
+.dropdown_ .dropdown_trigger.dt-active .btn_.btn_right_chevron:after {
+  @apply rotate-180;
+}
+.dropdown_ .dropdown_content {
+  @apply absolute hidden top-full left-0 z-10 bg-white divide-y divide-gray-100 rounded-lg shadow w-44;
+}
+.dropdown_ .dropdown_content .dc_items_list {
+  @apply py-2 text-sm text-gray-700;
+}
+.dropdown_ .dropdown_content .dc_items_list .dc_item a {
+  @apply block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white;
+}
+.dropdown_ .dc-active {
+  @apply block;
+}
 .btn_ {
   --btn-background: theme("colors.gray.200");
   --btn-hover-bg: theme("colors.gray.100");
@@ -164,8 +189,27 @@ video {
   color: var(--btn-color);
   @apply px-4 py-3 rounded-xl inline-flex items-center justify-center transition-all cursor-pointer;
 }
+.btn_.btn_icon {
+  @apply aspect-square;
+}
 .btn_.btn-icon-between {
   @apply !justify-between;
+}
+.btn_.btn_sm {
+  @apply px-3 py-2 text-sm;
+}
+.btn_.btn_sm.btn_right_chevron:after {
+  width: 16px;
+  height: 16px;
+  background-size: 1rem;
+}
+.btn_.btn_xs {
+  @apply px-2 py-1 text-s;
+}
+.btn_.btn_xs.btn_right_chevron:after {
+  width: 16px;
+  height: 16px;
+  background-size: 1rem;
 }
 .btn_.btn_primary {
   --btn-background: theme("colors.primary.600");
@@ -200,10 +244,89 @@ video {
   background-repeat: no-repeat;
   background-size: 1.25rem;
   transition: transform 0.2s ease-in-out;
-  @apply rotate-180;
+  @apply ml-1;
 }
 .btn_.collapsed.btn_right_chevron:after {
   @apply rotate-0;
+}
+.input_ {
+  @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus-visible:outline-primary-500 focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5;
+}
+.input_.input_sm {
+  @apply px-3 py-2 text-s;
+}
+.input_.input_xs {
+  @apply px-2 py-1 text-xs rounded-lg;
+}
+.check_input_ {
+  @apply flex items-center px-2 py-1 cursor-pointer rounded hover:bg-gray-100 dark:hover:bg-gray-600;
+}
+.check_input_ input {
+  @appy w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-700 dark:focus:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500;
+}
+.check_input_ label {
+  @apply w-full ml-2 text-s font-medium text-gray-900 rounded dark:text-gray-300 cursor-pointer;
+}
+.check_switch_ {
+  --button-width: 3.5em;
+  --button-height: 2em;
+  --toggle-diameter: 1.5em;
+  --button-toggle-offset: calc((var(--button-height) - var(--toggle-diameter)) / 2);
+  --toggle-shadow-offset: 10px;
+  --toggle-wider: 3em;
+  --color-grey: #cccccc;
+  --color-primary: theme("colors.primary.500");
+  @apply cursor-pointer;
+}
+.check_switch_ input[type='checkbox'] {
+  @apply sr-only;
+}
+.check_switch_ input[type='checkbox']:checked + .cs_slider {
+  background-color: var(--color-primary);
+}
+.check_switch_ input[type='checkbox']:checked + .cs_slider:after {
+  transform: translateX(calc(var(--button-width) - var(--toggle-diameter) - var(--button-toggle-offset)));
+  box-shadow: calc(var(--toggle-shadow-offset) * -1) 0 calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
+}
+.check_switch_ input[type='checkbox']:checked:active + .cs_slider:after {
+  transform: translateX(calc(var(--button-width) - var(--toggle-wider) - var(--button-toggle-offset)));
+}
+.check_switch_ input[type='checkbox']:active + .cs_slider:after {
+  width: var(--toggle-wider);
+}
+.check_switch_ .cs_slider {
+  display: inline-block;
+  width: var(--button-width);
+  height: var(--button-height);
+  background-color: var(--color-grey);
+  border-radius: calc(var(--button-height) / 2);
+  position: relative;
+  transition: 0.3s all ease-in-out;
+}
+.check_switch_ .cs_slider:after {
+  content: "";
+  display: inline-block;
+  width: var(--toggle-diameter);
+  height: var(--toggle-diameter);
+  background-color: #fff;
+  border-radius: calc(var(--toggle-diameter) / 2);
+  position: absolute;
+  top: var(--button-toggle-offset);
+  transform: translateX(var(--button-toggle-offset));
+  box-shadow: var(--toggle-shadow-offset) 0 calc(var(--toggle-shadow-offset) * 4) rgba(0, 0, 0, 0.1);
+  transition: 0.3s all ease-in-out;
+}
+.check_switch_.check_switch_filter {
+  @apply flex justify-between items-center;
+}
+.check_switch_.check_switch_filter .cs_title {
+  @apply text-sm font-medium;
+}
+.check_switch_.check_switch_sm {
+  --button-width: 2.5em;
+  --button-height: 1.5em;
+  --toggle-diameter: 1em;
+  --toggle-wider: 2em;
 }
 .btn-check:checked + .btn_ {
   @apply bg-primary-600 text-white border-transparent;
@@ -429,6 +552,40 @@ header .h-menus .h-menu-item:hover .hm-hover-menu {
 .main .m-shop-product-list .mspl-item .mspli-main .mspli-lowest-price span {
   @apply flex line-clamp-1 text-xs gap-2 text-red-600 font-medium;
 }
+.category-page {
+  @apply flex gap-4 relative;
+}
+.category-page .cp-filter {
+  width: 220px;
+  height: calc(100vh - var(--header-height)) !important;
+  top: var(--header-height);
+  @apply sticky;
+}
+.category-page .cp-filter .cpf-content {
+  @apply border border-solid border-gray-100 h-full flex flex-col overflow-y-auto rounded-xl;
+}
+.category-page .cp-filter .cpf-content .cpf-title {
+  @apply px-3 py-3 border-b border-solid border-gray-100;
+}
+.category-page .cp-filter .cpf-content .cpf-title span {
+  @apply text-s text-gray-600;
+}
+.category-page .cp-filter .cpf-content .cpf-filters .cpf-item {
+  @apply border-b border-solid border-gray-100 py-2 px-3;
+}
+.category-page .cp-filter .cpf-content .cpf-filters .cpf-item .cpfi-title {
+  @apply text-s font-medium text-gray-700 inline-block mb-2;
+}
+.category-page .cp-filter .cpf-content .cpf-filters .cpf-item .cpf-price-range {
+  @apply flex gap-2 items-center;
+}
+.category-page .cp-filter .cpf-content .cpf-filters .cpf-item .cpf-filter-item-lists {
+  max-height: 300px;
+  @apply overflow-y-auto;
+}
+.category-page .cp-content {
+  @apply flex-1;
+}
 .product-page .pp-info-content {
   @apply grid grid-cols-2;
 }
@@ -516,6 +673,13 @@ header .h-menus .h-menu-item:hover .hm-hover-menu {
   direction: rtl;
   font-size: 0.5em;
   text-align: left;
+}
+.rating.rating_sm {
+  font-size: 0.2em;
+}
+.rating.rating_sm .star {
+  width: 16px;
+  height: 16px;
 }
 .rating .star {
   background-image: url('data:image/svg+xml, <svg fill="gray" viewBox="0 0 22 20" xmlns="http://www.w3.org/2000/svg"><path d="M20.924 7.625a1.523 1.523 0 0 0-1.238-1.044l-5.051-.734-2.259-4.577a1.534 1.534 0 0 0-2.752 0L7.365 5.847l-5.051.734A1.535 1.535 0 0 0 1.463 9.2l3.656 3.563-.863 5.031a1.532 1.532 0 0 0 2.226 1.616L11 17.033l4.518 2.375a1.534 1.534 0 0 0 2.226-1.617l-.863-5.03L20.537 9.2a1.523 1.523 0 0 0 .387-1.575Z"/></svg>');
