--- a/tailwind.css
+++ b/tailwind.css
@@ -181,6 +181,18 @@ video {
 .dropdown_ .dc-active {
   @apply block;
 }
+.badge_ {
+  --badge-background: theme("colors.gray.200");
+  --badge-hover-bg: theme("colors.gray.100");
+  --badge-color: theme("colors.gray.800");
+  background: var(--badge-background);
+  color: var(--badge-color);
+  @apply text-xs font-medium py-1 px-2 rounded;
+}
+.badge_.badge_rose {
+  --badge-background: theme("colors.rose.200");
+  --badge-color: theme("colors.rose.800");
+}
 .btn_ {
   --btn-background: theme("colors.gray.200");
   --btn-hover-bg: theme("colors.gray.100");
@@ -194,6 +206,12 @@ video {
 }
 .btn_.btn-icon-between {
   @apply !justify-between;
+}
+.btn_.btn_start {
+  @apply !justify-start;
+}
+.btn_.btn_left_icon {
+  @apply gap-1;
 }
 .btn_.btn_sm {
   @apply px-3 py-2 text-sm;
@@ -217,6 +235,11 @@ video {
 }
 .btn_.btn_transparent {
   --btn-background: transparent;
+  --btn-color: theme("colors.gray.800");
+}
+.btn_.btn_transparent.btn_active {
+  --btn-background: theme("colors.gray.200");
+  --btn-hover-bg: theme("colors.gray.200");
   --btn-color: theme("colors.gray.800");
 }
 .btn_.btn_transparent:hover {
@@ -248,6 +271,12 @@ video {
 }
 .btn_.collapsed.btn_right_chevron:after {
   @apply rotate-0;
+}
+.form_input_ {
+  @apply flex flex-col gap-1 w-full;
+}
+.form_input_ label {
+  @apply text-s text-gray-500 px-1 font-medium;
 }
 .input_ {
   @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus-visible:outline-primary-500 focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5;
@@ -338,7 +367,7 @@ video {
   display: none;
 }
 .product-rect-content {
-  max-height: 400px;
+  max-height: 420px;
   @apply bg-white border border-solid border-gray-100 px-4 pt-6 pb-0 rounded-xl flex flex-col items-center justify-center w-full h-full gap-1;
 }
 .product-rect-content.procut-rect-image {
@@ -551,6 +580,92 @@ header .h-menus .h-menu-item:hover .hm-hover-menu {
 }
 .main .m-shop-product-list .mspl-item .mspli-main .mspli-lowest-price span {
   @apply flex line-clamp-1 text-xs gap-2 text-red-600 font-medium;
+}
+.account-page {
+  @apply flex gap-4 relative;
+}
+.account-page .ap-als-content {
+  width: 220px;
+}
+.account-page .ap-als-content .ap-alsc-wrapper {
+  top: var(--header-height);
+  @apply sticky py-2;
+}
+.account-page .ap-content {
+  @apply flex-1 py-2;
+}
+.account-page .ap-content .ap-title {
+  @apply text-xl font-semibold leading-6 text-gray-700 inline-flex items-end gap-1;
+}
+.account-page .ap-content .apc-filters {
+  @apply flex gap-3 my-3;
+}
+.account-page .ap-content .apc-orders-page .op-lists .opl-item {
+  @apply border border-solid border-gray-200 rounded-xl overflow-hidden;
+}
+.account-page .ap-content .apc-orders-page .op-lists .opl-item .opl-item-header {
+  @apply bg-gray-100 px-3 py-2 flex items-center;
+}
+.account-page .ap-content .apc-orders-page .op-lists .opl-item .opl-item-header .oplh-item {
+  gap: 0.15rem;
+  @apply flex flex-col w-full;
+}
+.account-page .ap-content .apc-orders-page .op-lists .opl-item .opl-item-header .oplh-item span {
+  @apply text-xs text-gray-500 font-medium;
+}
+.account-page .ap-content .apc-orders-page .op-lists .opl-item .opl-item-header .oplh-item b {
+  @apply text-xs font-medium text-zinc-800;
+}
+.account-page .ap-content .apc-orders-page .op-lists .opl-item .opl-item-main {
+  @apply p-2;
+}
+.account-page .ap-content .apc-orders-page .op-lists .opl-item .opl-item-main .opli-product-lists {
+  @apply flex flex-col gap-3;
+}
+.account-page .ap-content .apc-orders-page .op-lists .opl-item .opl-item-main .opli-product-lists .opli-product-item {
+  @apply border border-solid border-gray-200 rounded-xl p-4 flex justify-between items-center;
+}
+.account-page .ap-content .apc-orders-page .op-lists .opl-item .opl-item-main .opli-product-lists .opli-product-item .opli-pi-infos {
+  @apply flex gap-2;
+}
+.account-page .ap-content .apc-orders-page .op-lists .opl-item .opl-item-main .opli-product-lists .opli-product-item .opli-pi-infos .opli-pi-images {
+  width: 40px;
+}
+.account-page .ap-content .apc-orders-page .op-lists .opl-item .opl-item-main .opli-product-lists .opli-product-item .opli-pi-infos .opli-pi-images img {
+  @apply w-10 h-10 border-2 border-solid border-gray-100 rounded-full object-cover;
+}
+.account-page .ap-content .apc-orders-page .op-lists .opl-item .opl-item-main .opli-product-lists .opli-product-item .opli-pi-price {
+  @apply flex flex-col text-right;
+}
+.account-page .ap-content .apc-coupon-page .apc-cp-lists {
+  @apply flex flex-col gap-2 mt-3;
+}
+.account-page .ap-content .apc-coupon-page .apc-cp-lists .apc-cp-item {
+  @apply bg-gradient-to-br from-purple-600 to-indigo-600 text-white text-center py-6 rounded-xl shadow-md relative;
+}
+.account-page .ap-content .apc-coupon-page .apc-cp-lists .apc-cp-item .apc-cp-item-image {
+  @apply w-36 mx-auto mb-4 rounded-lg;
+}
+.account-page .ap-content .apc-coupon-page .apc-cp-lists .apc-cp-item .apc-cp-item-title {
+  @apply text-2xl font-semibold mb-4;
+}
+.account-page .ap-content .apc-coupon-page .apc-cp-lists .apc-cp-item .apc-cp-item-coupon {
+  @apply flex items-center justify-center space-x-2 mb-6;
+}
+.account-page .ap-content .apc-coupon-page .apc-cp-lists .apc-cp-item .apc-cp-item-coupon .apc-cp-item-coupon-code {
+  @apply border-dashed border border-primary-400 text-white px-4 py-2 rounded-xl;
+}
+.account-page .ap-content .apc-setting-page .apc-sp-content {
+  @apply border rounded-xl border-solid border-gray-200 flex mt-3;
+}
+.account-page .ap-content .apc-setting-page .apc-sp-content .apc-sp-infos-title {
+  @apply text-lg font-medium text-primary-500;
+}
+.account-page .ap-content .apc-setting-page .apc-sp-content .apc-sp-user-infos {
+  @apply flex-1 p-4 border-r border-solid border-gray-200;
+}
+.account-page .ap-content .apc-setting-page .apc-sp-content .apc-sp-user-password {
+  @apply flex-1 p-4;
 }
 .basket-page {
   @apply flex gap-4 relative;
