--- a/tailwind.css
+++ b/tailwind.css
@@ -233,6 +233,10 @@ video {
   --btn-background: theme("colors.primary.600");
   --btn-color: theme("colors.white");
 }
+.btn_.btn_blue {
+  --btn-background: theme("colors.blue.600");
+  --btn-color: theme("colors.white");
+}
 .btn_.btn_transparent {
   --btn-background: transparent;
   --btn-color: theme("colors.gray.800");
@@ -279,13 +283,55 @@ video {
   @apply text-s text-gray-500 px-1 font-medium;
 }
 .input_ {
-  @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus-visible:outline-primary-500 focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5;
+  --input-background: theme("colors.gray.50");
+  --input-color: theme("colors.gray.900");
+  --input-border-color: theme("colors.gray.300");
+}
+.input_:not([type='checkbox']) {
+  background-color: var(--input-background);
+  color: var(--input-color);
+  border-color: var(--input-border-color);
+  @apply border text-sm rounded-lg focus-visible:outline-primary-500 focus:ring-primary-500 focus:border-primary-500 block p-2.5;
 }
 .input_.input_sm {
   @apply px-3 py-2 text-s;
 }
 .input_.input_xs {
   @apply px-2 py-1 text-xs rounded-lg;
+}
+.input_[type='checkbox'] {
+  width: 1rem;
+  height: 1rem;
+  color: dodgerblue;
+  vertical-align: middle;
+  -webkit-appearance: none;
+  background: none;
+  border: 0;
+  outline: 0;
+  flex-grow: 0;
+  background-color: #FFFFFF;
+  transition: background 300ms;
+  cursor: pointer;
+  @apply rounded;
+}
+.input_[type='checkbox']:before {
+  content: "";
+  color: transparent;
+  display: block;
+  width: inherit;
+  height: inherit;
+  border-radius: inherit;
+  border: 0;
+  background-color: transparent;
+  background-size: contain;
+  box-shadow: inset 0 0 0 1px #CCD3D8;
+}
+.input_[type='checkbox']:checked {
+  background-color: currentcolor;
+}
+.input_[type='checkbox']:checked:before {
+  box-shadow: none;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E %3Cpath d='M15.88 8.29L10 14.17l-1.88-1.88a.996.996 0 1 0-1.41 1.41l2.59 2.59c.39.39 1.02.39 1.41 0L17.3 9.7a.996.996 0 0 0 0-1.41c-.39-.39-1.03-.39-1.42 0z' fill='%23fff'/%3E %3C/svg%3E");
 }
 .check_input_ {
   @apply flex items-center px-2 py-1 cursor-pointer rounded hover:bg-gray-100 dark:hover:bg-gray-600;
@@ -405,6 +451,9 @@ video {
 }
 .product-rect-content:hover .prc-price button {
   @apply block;
+}
+.link-href {
+  @apply text-blue-500 font-medium hover:underline;
 }
 header .h-menus {
   @apply max-w-6xl mx-auto relative;
@@ -666,6 +715,18 @@ header .h-menus .h-menu-item:hover .hm-hover-menu {
 }
 .account-page .ap-content .apc-setting-page .apc-sp-content .apc-sp-user-password {
   @apply flex-1 p-4;
+}
+.auth-page {
+  @apply flex flex-col items-center justify-center mx-auto max-w-md w-full lg:py-0;
+}
+.auth-page .ap-content {
+  @apply w-full bg-white rounded-lg shadow p-6;
+}
+.auth-page .ap-content .apc-logo {
+  @apply flex items-center justify-center mb-6;
+}
+.auth-page .ap-content .apc-logo img {
+  @apply w-40;
 }
 .basket-page {
   @apply flex gap-4 relative;
