--- a/tailwind.less
+++ b/tailwind.less
@@ -186,6 +186,10 @@ a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, bo
         --btn-background: theme("colors.primary.600");
         --btn-color: theme("colors.white");
     }
+    &.btn_blue {
+      --btn-background: theme("colors.blue.600");
+      --btn-color: theme("colors.white");
+    }
     &.btn_transparent {
     --btn-background: transparent;
     --btn-color: theme("colors.gray.800");
@@ -240,13 +244,60 @@ a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, bo
   }
 }
 .input_{
-  @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus-visible:outline-primary-500 focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5;
+
+  --input-background:  theme("colors.gray.50");
+  --input-color: theme("colors.gray.900");
+  --input-border-color: theme("colors.gray.300");
+
+  &:not([type='checkbox']){
+    background-color: var(--input-background);
+    color: var(--input-color);
+    border-color: var(--input-border-color);
+    @apply border text-sm rounded-lg focus-visible:outline-primary-500 focus:ring-primary-500 focus:border-primary-500 block p-2.5;
+  }
   &.input_sm{
     @apply px-3 py-2 text-s;
   }
   &.input_xs{
-  @apply px-2 py-1 text-xs rounded-lg;
+    @apply px-2 py-1 text-xs rounded-lg;
   }
+
+  &[type='checkbox']{
+    width: 1rem;
+    height: 1rem;
+    color: dodgerblue;
+    vertical-align: middle;
+    -webkit-appearance: none;
+    background: none;
+    border: 0;
+    outline: 0;
+    flex-grow: 0;
+    background-color: #FFFFFF;
+    transition: background 300ms;
+    cursor: pointer;
+    @apply rounded;
+    &:before{
+      content: "";
+      color: transparent;
+      display: block;
+      width: inherit;
+      height: inherit;
+      border-radius: inherit;
+      border: 0;
+      background-color: transparent;
+      background-size: contain;
+      box-shadow: inset 0 0 0 1px #CCD3D8;
+    }
+    &:checked{
+      background-color: currentcolor;
+    }
+    &:checked:before{
+      box-shadow: none;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E %3Cpath d='M15.88 8.29L10 14.17l-1.88-1.88a.996.996 0 1 0-1.41 1.41l2.59 2.59c.39.39 1.02.39 1.41 0L17.3 9.7a.996.996 0 0 0 0-1.41c-.39-.39-1.03-.39-1.42 0z' fill='%23fff'/%3E %3C/svg%3E");
+    }
+  }
+
+
 }
 .check_input_{
   @apply flex items-center px-2 py-1 cursor-pointer rounded hover:bg-gray-100 dark:hover:bg-gray-600;
@@ -376,6 +427,9 @@ a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, bo
     }
   }
 }
+.link-href{
+  @apply text-blue-500 font-medium hover:underline;
+}
 
 header{
   .h-menus{
@@ -423,7 +477,6 @@ header{
     }
   }
 }
-
 .herousel-content{
   @apply bg-gradient-to-r from-primary-600 to-primary-900 py-8;
   .hc-wrapper{
@@ -659,6 +712,18 @@ header{
         }
       }
 
+    }
+  }
+}
+.auth-page{
+  @apply flex flex-col items-center justify-center mx-auto max-w-md w-full lg:py-0;
+  .ap-content{
+    @apply w-full bg-white rounded-lg shadow p-6;
+    .apc-logo{
+      @apply flex items-center justify-center mb-6;
+      img{
+        @apply w-40;
+      }
     }
   }
 }
